fix: UI search bar overlap with secret items

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -30,8 +30,6 @@ html {
   border-bottom: 1px solid var(--sn-stylekit-border-color);
   background-color: var(--sn-stylekit-background-color);
   color: var(--sn-stylekit-foreground-color);
-
-  min-height: 26px;
   padding: 13px;
   display: flex;
   flex-direction: column;
